--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="row">
         <button id="MRC" value="MRC" class="operator">mrc</button>
         <button id="M-" value="M-" class="operator">M-</button>
-        <button id="M+" value="M+" class="operator">M+</button>
+        <button id="M-add" value="M+" class="operator">M+</button>
         <button id="Percent" value="%" class="operator">%</button>
       </div>
       <div class="row">
